--- a/plugins/junit/pom.xml
+++ b/plugins/junit/pom.xml
@@ -68,6 +68,15 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- The Servlet API mocks in Spring Framework 4.x only supports Servlet 3.0 and higher.
+             This is only necessary in tests-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Portlet -->
         <dependency>
             <groupId>javax.portlet</groupId>
