test if jdk6 starts working via deleting webapps

--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
         <module>bom</module>
         <module>xwork-core</module>
         <module>core</module>
-        <module>apps</module>
+        <!--<module>apps</module>-->
         <module>plugins</module>
         <module>bundles</module>
         <module>archetypes</module>
