make maven's surefire show stacktrace in console

--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,7 @@
                         <excludes>
                             <exclude>**/TestBean.java</exclude>
                         </excludes>
+                        <useFile>false</useFile>
                     </configuration>
                 </plugin>
                 <plugin>
