--- a/archetypes/struts2-archetype-convention/pom.xml
+++ b/archetypes/struts2-archetype-convention/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-archetypes</artifactId>
-        <version>2.3.35</version>
+        <version>2.3.35-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
