--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>2.5.17-SNAPSHOT</version>
+        <version>2.5.17</version>
     </parent>
     <artifactId>struts2-core</artifactId>
     <packaging>jar</packaging>
