--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>struts2-bom</artifactId>
-    <version>2.3.36-SNAPSHOT</version>
+    <version>2.3.36</version>
     <packaging>pom</packaging>
 
     <name>Struts 2 Bill of Materials</name>
@@ -25,7 +25,7 @@
     </licenses>
 
     <properties>
-        <struts-version.version>2.3.36-SNAPSHOT</struts-version.version>
+        <struts-version.version>2.3.36</struts-version.version>
     </properties>
 
     <build>
@@ -197,6 +197,6 @@
     </dependencyManagement>
 
   <scm>
-    <tag>STRUTS_2_3_24_1</tag>
+    <tag>STRUTS_2_3_36</tag>
   </scm>
 </project>
