--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts-master</artifactId>
-        <version>11</version>
+        <version>12</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -279,11 +279,12 @@
                         <useIdeaDefaultExcludes>true</useIdeaDefaultExcludes>
                         <useDefaultExcludes>true</useDefaultExcludes>
                         <addDefaultLicenseMatchers>false</addDefaultLicenseMatchers>
-                        <licenseMatchers>
-                            <classNames>
-                                <className>org.apache.rat.analysis.license.ApacheSoftwareLicense20</className>
-                            </classNames>
-                        </licenseMatchers>
+                        <licenses>
+                            <licens implementation="org.apache.rat.analysis.license.ApacheSoftwareLicense20"/>
+                        </licenses>
+                        <licenseFamilies>
+                            <licenseFamily implementation="org.apache.rat.license.Apache20LicenseFamily"/>
+                        </licenseFamilies>
                         <includes>
                             <include>pom.xml</include>
                             <include>src/**</include>
