--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
                             <groupId>org.apache.maven.plugins</groupId>
                             <artifactId>maven-javadoc-plugin</artifactId>
                             <configuration>
-                                <additionalparam>-Xdoclint:none</additionalparam>
+                                <doclint>none</doclint>
                             </configuration>
                         </plugin>
                     </plugins>
