WW-4866 Includes 1.8+ JDKs

--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
         <profile>
             <id>jdk8</id>
             <activation>
-                <jdk>1.8</jdk>
+                <jdk>[1.8,)</jdk>
             </activation>
             <build>
                 <pluginManagement>
