Update maven-wrapper to 3.5.4 and add maven-wrapper.jar to .gitignore
The MavenWrapperDownloader downloads the JAR if it is missing locally.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ Servers/
 .java-version
 
 # Maven
+.mvn/wrapper/maven-wrapper.jar
 core/target
 plugins/convention/target
 plugins/embeddedjsp/target
