--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,8 @@
                             <artifactId>maven-surefire-plugin</artifactId>
                             <configuration>
                                 <argLine>--add-modules java.activation --add-modules java.xml.bind</argLine>
+                                <threadCount>0</threadCount>
+                                <forkMode>never</forkMode>
                             </configuration>
                         </plugin>
                     </plugins>
@@ -972,16 +974,16 @@
             </dependency>
 
             <dependency>
-                <groupId>org.easytesting</groupId>
-                <artifactId>fest-assert</artifactId>
-                <version>1.4</version>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>3.11.1</version>
                 <scope>test</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.mockito</groupId>
-                <artifactId>mockito-all</artifactId>
-                <version>1.10.19</version>
+                <artifactId>mockito-core</artifactId>
+                <version>2.23.0</version>
                 <scope>test</scope>
             </dependency>
 
