[WW-4981] Adds support for JDK11  (#270)
* Upgrades test dependencies

* Drops unused lib

* Uses AssertJ instead of FestAssert

* Upgrades Surefire Maven Plugin to 2.22.1

* Downgrades to AssertJ 2.x to support JDK7

* decouple tests from java version

Refactor a java 9 conditional test to work always with any java version

See also WW-4845

* fix NullPointerException in NotURLClassLoader tests

Also includes a few improvements

See also WW-4845

* do not specify threadCount & forkMode which breaks tests in java 9

See also WW-4845

* pass all current tests with java 11

See also WW-4981

* fix an odd path problem in java 9

See also WW-4845

* gitignore test-output

See also WW-4981

* ask travis an oracle jdk 11 build

See also WW-4981

* ask travis to report coverage only in latest working jdk, jdk8

See also WW-4845

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,18 @@ jdk:
   - openjdk7
   - oraclejdk8
   - oraclejdk9
+  - oraclejdk11
 
 install: true
 script: mvn test -DskipAssembly
 
 after_success:
-  - mvn clean cobertura:cobertura org.eluder.coveralls:coveralls-maven-plugin:report com.updateimpact:updateimpact-maven-plugin:submit -Ptravis-coveralls,update-impact -DskipAssembly
+  # TODO delete following if statement after fix of https://github.com/cobertura/cobertura/issues/271
+  - if [ "$TRAVIS_JDK_VERSION" == "openjdk8" ] || [ "$TRAVIS_JDK_VERSION" == "oraclejdk8" ]; then
+      mvn clean cobertura:cobertura org.eluder.coveralls:coveralls-maven-plugin:report com.updateimpact:updateimpact-maven-plugin:submit -Ptravis-coveralls,update-impact -DskipAssembly
+    else
+      echo "Not reporting coverage for $TRAVIS_JDK_VERSION due to incomatibility or to save performance";
+    fi
 
 env:
   global:
